fix(style): fix landing page button on mobile

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -116,6 +116,5 @@ p {
 
   .btnSec {
     font-size: 1rem;
-    margin: 0.6rem;
   }
 }
